# SystemMonitor

./: CMakeLists.txt  Makefile  README.md
1_Software/: main.cpp
1_Software/Common/inc/: ItfOperatingSystem.hpp  format.h  process.h  processor.h  system.h
1_Software/Common/src/: format.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
1_Software/Linux/inc/: ProcessMonitor_linux.hpp
1_Software/Linux/src/: ProcessMonitor_linux.cpp  linux_parser.cpp
1_Software/MacOs/inc/: ProcessMonitor_macOs.hpp  macOs_parser.h  macOs_parser_cfg.h  ncurses_display.h
1_Software/MacOs/src/: ProcessMonitor_macOs.cpp  macOs_parser.cpp
